fix spacing

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ h2 {
     border-radius: 5px;
     overflow: hidden;
     margin-bottom: .75vmax;
+    margin-right: .75vmax;
     background-size: cover;
     position: relative;
 }
